Wed Dec 23 17:57:45 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c, io.c, util.c: prefer rb_syserr_fail with saved errno
	  over setting errno then call rb_sys_fail, not to be clobbered
	  potentially and to reduce thread local errno accesses.

Wed Dec 23 11:58:52 2015  Yuichiro Kaneko  <yui-knk@ruby-lang.org>

	* string.c: Fix document. Default value of the first
	  argument of `String#split` is not `$;` but `nil`.
	  When `nil` is passed as first argument, `$;` is used.
	  [ci skip] [Bug #11729] [ruby-dev:49378]

Wed Dec 23 07:15:17 2015  Eric Wong  <e@80x24.org>

	* ext/socket/init.c (rsock_init_sock): reject reserved FDs
	  [ruby-core:72445] [Bug #11862]

Wed Dec 23 02:59:26 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (__STDC_WANT_LIB_EXT1__): necessary to use memset_s
	  in strict C99 mode.

Wed Dec 23 02:34:36 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* regexec.c (match_at): move direct threaded VM code to get rid of
	  mixed declarations and code, and enable it only for gcc since it
	  depends on a gcc extension.

Wed Dec 23 02:23:19 2015  Yuki Nishijima  <mail@yukinishijima.net>

	* gems/bundled_gems: Upgrade the did_you_mean gem to 1.0.0

	* NEWS: Add news about the did_you_mean gem

Wed Dec 23 02:18:57 2015  Jake Worth  <jakeworth82@gmail.com>

	* doc/contributing.rdoc: [DOC] remove an extra word "here".
	  [Fix GH-1169]

Wed Dec 23 01:58:20 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* regexec.c (USE_DIRECT_THREADED_VM): enable direct threaded VM by
	  the default.

Tue Dec 22 22:15:53 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (internal_object_p): should not expose singleton classes
	  without a metaclass.  based on patches by ko1 and shugo.
	  [Bug #11740]

	* class.c (rb_singleton_class_object_p): added.

Tue Dec 22 22:15:08 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/io/console/io-console.gemspec: bump up to 0.4.4.

Tue Dec 22 22:11:06 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>
